# file-ops-mcp

./: README.md  pyproject.toml
docs/: FileOps-MCP-16-Commandments.md
src/: __init__.py  constants.py  main.py  server.py
src/operations/: __init__.py  dir_ops.py  doc_ops.py  file_ops.py  help_ops.py  help_texts.py  search_ops.py  unified_ops.py  version_ops.py
src/resources/: __init__.py  resource_handlers.py
src/utils/: __init__.py  formatters.py  git_utils.py  mcp_cache_manager.py  path_utils.py  security.py
