[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fileops-mcp"
version = "0.3.0"
description = "FileOps MCP Server for file system operations with Git version control"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "mcp[cli]>=1.2.0",
    "gitpython>=3.1.30",
    "pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "black",
    "isort",
    "flake8",
]
cli = [
    "mcp[cli]",
]

[project.scripts]
fileops-mcp = "src.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
